Fix font & resize Jump

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -93,7 +93,7 @@ h1{
 	height:29vw ;
 	color: rgb(255, 255, 255);
 	width: 100%;
-	background-image: url(Imgs/Jumbtrone.svg);
+	background-image: url(Imgs/Jumbtrone.jpg);
 	background-size: cover;
 	overflow: hidden;
 }
